--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.97.5",
     "@react-three/fiber": "^8.15.16",
+    "@react-three/postprocessing": "^2.16.0",
     "@react-three/rapier": "^1.2.1",
     "leva": "^0.9.35",
     "next": "14.1.0",
